tests/neg-custom-args/captures/consume-twice-same-line.check
-- Error: tests/neg-custom-args/captures/consume-twice-same-line.scala:5:16 --------------------------------------------
Separation failure: Illegal access to (x : Object^), which was passed as a consume parameter to method send
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
5 |  send(x); send(x)  // error
  |       -        ^
  |       |        Then, it was used here
  |       The capability was consumed here.

-- Error: tests/neg-custom-args/captures/consume-twice-same-line.scala:8:16 --------------------------------------------
Separation failure: Illegal access to (x : Object^), which was passed as a consume parameter to method send
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
8 |  send(x); send(x); send(x)  // error // error
  |       -        ^
  |       |        Then, it was used here
  |       The capability was consumed here.

-- Error: tests/neg-custom-args/captures/consume-twice-same-line.scala:8:25 --------------------------------------------
Separation failure: Illegal access to (x : Object^), which was passed as a consume parameter to method send
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
8 |  send(x); send(x); send(x)  // error // error
  |       -                 ^
  |       |                 Then, it was used here
  |       The capability was consumed here.

